--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="464dp"
-        android:text="Loading..."
+        android:text="Cargando..."
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView8"
         app:layout_constraintEnd_toEndOf="parent"
