--- a/app/src/main/res/layout/activity_transporter_set_availability_pick_date.xml
+++ b/app/src/main/res/layout/activity_transporter_set_availability_pick_date.xml
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="256dp"
-        android:text="Enter"
+        android:text="Entrar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
