--- a/app/src/main/res/layout/activity_farmer_begin_request_pickup.xml
+++ b/app/src/main/res/layout/activity_farmer_begin_request_pickup.xml
@@ -38,7 +38,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:breakStrategy="simple"
-        android:text="What kind of produce do you need transported?"
+        android:text="¿Qué tipo de producto usted necesita transportar?"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -49,7 +49,7 @@
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="64dp"
-        android:text="How much? "
+        android:text="¿Qué cantidad?"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/produceSpinner" />
