--- a/app/src/main/res/layout/activity_farmer_edit_profile.xml
+++ b/app/src/main/res/layout/activity_farmer_edit_profile.xml
@@ -81,10 +81,13 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:id="@+id/farmerSaveChangesButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:text="Save Changes" />
+            android:layout_marginLeft="64dp"
+            android:layout_marginStart="64dp"
+            android:layout_toEndOf="@+id/user_profile_name"
+            android:layout_toRightOf="@+id/user_profile_name"
+            android:text="Guardar cambios"
+            android:textSize="14sp" />
 
         <RatingBar
             android:id="@+id/ratingBar"
@@ -116,11 +119,11 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:background="@android:color/holo_green_dark"
-            android:textColor="#fff"
             android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
-            android:text="Phone Number: " />
+            android:text="Número de Celular:"
+            android:textColor="#fff" />
 
         <TextView
             android:id="@+id/user_profile_phoneNumber"
@@ -155,11 +158,11 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:background="@android:color/holo_green_dark"
-            android:textColor="#fff"
             android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
-            android:text="Address: " />
+            android:text="Dirección Línea:"
+            android:textColor="#fff" />
 
         <TextView
             android:id="@+id/user_profile_address"
@@ -192,11 +195,11 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:background="@android:color/holo_green_dark"
-            android:textColor="#fff"
             android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
-            android:text="City:" />
+            android:text="Ciudad:"
+            android:textColor="#fff" />
 
         <TextView
             android:id="@+id/user_profile_city"
@@ -231,11 +234,11 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:background="@android:color/holo_green_dark"
-            android:textColor="#fff"
             android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
-            android:text="Postal Code:" />
+            android:text="Código Postal:"
+            android:textColor="#fff" />
 
         <TextView
             android:id="@+id/user_profile_postalcode"
@@ -270,11 +273,11 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:background="@android:color/holo_green_dark"
-            android:textColor="#fff"
             android:clickable="false"
             android:elevation="4dp"
             android:padding="20dp"
-            android:text="Country: " />
+            android:text="País:"
+            android:textColor="#fff" />
 
         <TextView
             android:id="@+id/user_profile_country"
@@ -344,7 +347,7 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:text="Edit Profile" />
+            android:text="Editar su perfil" />
 
         <Button
             android:id="@+id/farmerHistoryButton"
@@ -353,7 +356,7 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_below="@+id/farmerEditProfileButton"
-            android:text="View History" />
+            android:text="Ver su historia" />
 
         <Button
             android:id="@+id/farmerProfileBackButton"
@@ -362,7 +365,7 @@ tools:context="com.example.wagner.avocado.FarmerEditProfile">
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginStart="8dp"
-            android:text="Back"
+            android:text="Anterior"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
