--- a/app/src/main/res/layout/activity_farmer_request_pickup_order_confirmation.xml
+++ b/app/src/main/res/layout/activity_farmer_request_pickup_order_confirmation.xml
@@ -23,7 +23,7 @@
         android:layout_height="42dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:text="Order Summary"
+        android:text="Confirmación"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
