--- a/app/src/main/res/layout/activity_profile_history.xml
+++ b/app/src/main/res/layout/activity_profile_history.xml
@@ -35,7 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="History"
+        android:text="Historia"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
