--- a/app/src/main/res/layout/activity_sign_up_set_car_info_transporter.xml
+++ b/app/src/main/res/layout/activity_sign_up_set_car_info_transporter.xml
@@ -39,7 +39,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:hint="What vehicle do you operate?"
-        android:text="Tell us about your vehicle. "
+        android:text="Cuéntenos sobre su vehículo."
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.854"
@@ -54,7 +54,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="112dp"
         android:ems="10"
-        android:hint="Vehicle Model"
+        android:hint="Modelo de vehículo"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -69,7 +69,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="License Plate Number"
+        android:hint="Número de placa"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -84,7 +84,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
         android:ems="10"
-        android:hint="Vehicle Capacity"
+        android:hint="Capacidad de vehículo"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -95,7 +95,7 @@
     <Button
         android:id="@+id/signUpSetLocationSkipButton"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="62dp"
+        android:layout_width="78dp"
         android:layout_height="39dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
