--- a/app/src/main/res/layout/activity_transporter_messages.xml
+++ b/app/src/main/res/layout/activity_transporter_messages.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="64dp"
             android:layout_marginTop="60dp"
-            android:text="Accept"
+            android:text="Aceptar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="36dp"
             android:layout_marginTop="60dp"
-            android:text="Decline"
+            android:text="Negar"
             app:layout_constraintStart_toEndOf="@+id/changeStatusButton"
             app:layout_constraintTop_toTopOf="parent" />
 
