--- a/app/src/main/res/layout/activity_transporter_view_schedule.xml
+++ b/app/src/main/res/layout/activity_transporter_view_schedule.xml
@@ -27,7 +27,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="I can't make the trip today."
+            android:text="No puedo hoy."
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lateButton" />
@@ -40,7 +40,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="I will be a few mins late."
+            android:text="Llegaré unos minutos tarde."
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/hereButton" />
@@ -53,7 +53,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            android:text="I'm here!"
+            android:text="¡Estoy aquí!"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/onMyWayButton" />
@@ -66,7 +66,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="28dp"
-            android:text="I'm on my way!"
+            android:text="En camino."
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +90,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="16dp"
-        android:text="Schedule"
+        android:text="El Horario"
         android:textAppearance="@style/TextAppearance.AppCompat.Headline"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -103,7 +103,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
-        android:text="Back"
+        android:text="Anterior"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -113,8 +113,9 @@
         android:layout_height="314dp"
         android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="80dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.48"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView17" />
 
@@ -124,33 +125,33 @@
         android:layout_height="45dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="72dp"
-        android:text="Next Week"
-        android:textOff="Next Week"
-        android:textOn="Next Week"
+        android:text="This Week"
+        android:textOff="La Semana"
+        android:textOn="La Semana"
         app:layout_constraintStart_toEndOf="@+id/transporterViewScheduleTomorrowButton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ToggleButton
         android:id="@+id/transporterViewScheduleTomorrowButton"
-        android:layout_width="117dp"
+        android:layout_width="95dp"
         android:layout_height="44dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="72dp"
-        android:text="Tomorrow"
-        android:textOff="Tomorrow"
-        android:textOn="Tomorrow"
+        android:text="Mañana"
+        android:textOff="Mañana"
+        android:textOn="Mañana"
         app:layout_constraintStart_toEndOf="@+id/transporterViewScheduleTodayButton"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ToggleButton
         android:id="@+id/transporterViewScheduleTodayButton"
-        android:layout_width="74dp"
+        android:layout_width="57dp"
         android:layout_height="44dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="72dp"
-        android:text="Today"
-        android:textOff="Today"
-        android:textOn="Today"
+        android:text="Hoy"
+        android:textOff="Hoy"
+        android:textOn="Hoy"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -161,7 +162,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="Set Availability"
+        android:text="Disponibilidad"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.95"
         app:layout_constraintStart_toEndOf="@+id/farmerRequestPickupChooseTransporterBackButton"
@@ -175,7 +176,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Start Today's Trip"
+        android:text="Comience el viaje"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/transporterViewScheduleBackButton" />
