--- a/app/src/main/res/layout/activity_sign_up_farmer_add_profile.xml
+++ b/app/src/main/res/layout/activity_sign_up_farmer_add_profile.xml
@@ -103,7 +103,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="20dp"
-        android:text="Enter a short bio:"
+        android:text="Ingrese una breve biografía:"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signUpFarmerAddProfileButton" />
