--- a/app/src/main/res/layout/activity_sign_up_transporter_add_profile.xml
+++ b/app/src/main/res/layout/activity_sign_up_transporter_add_profile.xml
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
-        android:text="Enter a short bio:"
+        android:text="Ingrese una breve biografía:"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signUpTransporterAddProfileButton" />
