--- a/app/src/main/res/layout/activity_transporter_home.xml
+++ b/app/src/main/res/layout/activity_transporter_home.xml
@@ -15,11 +15,11 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="72dp"
         android:text="El Horario"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="179dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/transporterHomeProfileButton"
