--- a/app/src/main/res/layout/activity_farmer_home.xml
+++ b/app/src/main/res/layout/activity_farmer_home.xml
@@ -15,11 +15,12 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="96dp"
         android:text="Solicitar Transporte"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="214dp" />
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <Button
         android:id="@+id/farmerHomeProfileButton"
