--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="88dp"
         android:layout_marginTop="28dp"
         android:onClick="onFarmerClicked"
-        android:text="Farmer"
+        android:text="Productor"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
         tools:text="Productor" />
@@ -26,7 +26,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="28dp"
         android:onClick="onTransporterClicked"
-        android:text="Transporter"
+        android:text="Transportador"
         app:layout_constraintBottom_toTopOf="@+id/FarmerRequestPickupDateBackButton"
         app:layout_constraintEnd_toStartOf="@+id/pmCheckBox"
         app:layout_constraintStart_toEndOf="@+id/Farmer"
@@ -36,7 +36,7 @@
     <Button
         android:id="@+id/cancelButton"
         style="@style/Widget.AppCompat.Button.Borderless.Colored"
-        android:layout_width="92dp"
+        android:layout_width="107dp"
         android:layout_height="50dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
